--- a/app/src/main/res/layout/activity_register_login_page.xml
+++ b/app/src/main/res/layout/activity_register_login_page.xml
@@ -64,7 +64,6 @@
         android:layout_below="@+id/firbaseText"
         android:layout_marginTop="35dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="35dp"
         android:orientation="vertical">
         <EditText
             android:inputType="textWebEmailAddress"
@@ -89,8 +88,20 @@
             android:layout_height="60dp"
             android:layout_alignStart="@+id/firstlinear"
             android:background="@drawable/round_bg"
-            android:text="Continue"
+            android:text="Save"
             android:textColor="#000000"
             />
     </LinearLayout>
+
+    <Button
+        android:visibility="invisible"
+        android:id="@+id/svNext"
+        android:layout_below="@+id/firstlinear"
+        android:layout_width="250dp"
+        android:layout_height="60dp"
+        android:layout_alignStart="@+id/firstlinear"
+        android:background="@drawable/round_bg"
+        android:text="Next"
+        android:textColor="#000000"
+        />
 </RelativeLayout>
