Changes By Mayank

--- a/app/src/main/res/layout/activity_information_page.xml
+++ b/app/src/main/res/layout/activity_information_page.xml
@@ -43,9 +43,10 @@
                 android:id="@+id/licenseAgreement"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="monospace"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/information"
-                android:textColor="#FFFFFF"
+                android:gravity="center"
+                android:textColor="#e5e5e5"
                 android:textSize="22sp" />
 
         </RelativeLayout>
