--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#0183ce</color>
     <color name="colorAccent">#ffcc00</color>
 
-    <color name="colorPrimary2">#0000FF</color>
+    <color name="colorPrimary2">#3498DB</color>
     <color name="PrimaryDark">#D32F2F</color>
     <color name="Primary_light">#ffcdd2</color>
     <color name="Primary_text">#212121</color>
